# pkgi

./: .clang-format  .gitignore  .nvimrc  .travis.yml  .travis_deploy_key.enc  AUTHORS  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  conanfile.py  cross.cmake  extract.cpp  host.cmake  pkgi.c  pkgi.cpp  pkgi.h  pkgi_aes128.c  pkgi_aes128.h  pkgi_cli.cpp  pkgi_config.c  pkgi_config.cpp  pkgi_config.h  pkgi_config.hpp  pkgi_db.c  pkgi_db.cpp  pkgi_db.h  pkgi_db.hpp  pkgi_dialog.c  pkgi_dialog.h  pkgi_download.c  pkgi_download.cpp  pkgi_download.h  pkgi_download.hpp  pkgi_downloader.cpp  pkgi_downloader.hpp  pkgi_filehttp.cpp  pkgi_filehttp.hpp  pkgi_http.hpp  pkgi_menu.c  (+15 more)
.github/: ISSUE_TEMPLATE.md
assets/: imgui_f.cg  imgui_f_cg.gxp  imgui_v.cg  imgui_v_cg.gxp
assets/sce_sys/livearea/contents/: template.xml.in
ci/: Pipfile  ci.sh  setup_conan.sh
ci/conan/: settings.yml
ci/conan-bzip2/: CMakeLists.txt  conanfile.py
ci/conan-fmt/: .gitignore  .travis.yml  LICENSE.md  conanfile.py
ci/conan-fmt/.travis/: install.sh
ci/conan-fmt/test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
ci/conan-imgui/: CMakeLists.txt  conanfile.py
ci/conan-imgui/test_package/: test_package.cpp
ci/conan-libzip/: conanfile.py  forvita.patch  zlib-config.patch
ci/conan-taihen/: CMakeLists.txt  cmake.patch  conanfile.py
ci/conan-vitasdk/: cmake-toolchain.patch  conanfile.py
ci/conan-vitasqlite/: conanfile.py  temp-support.patch
ci/conan/profiles/: vita
sce_sys/livearea/contents/: template.xml
simulator/: pkgi.sln  pkgi.vcxproj  pkgi.vcxproj.filters
src/: aes128.c  aes128.cpp  aes128.h  aes128.hpp  bgdl.cpp  bgdl.hpp  cli.cpp  comppackdb.cpp  comppackdb.hpp  config.cpp  config.hpp  db.cpp  db.hpp  dialog.c  dialog.cpp  dialog.hpp  download.cpp  download.hpp  downloader.cpp  downloader.hpp  extractzip.cpp  extractzip.hpp  file.hpp  filedownload.cpp  filedownload.hpp  filehttp.cpp  filehttp.hpp  gameview.cpp  gameview.hpp  http.hpp  imagefetcher.cpp  imagefetcher.hpp  imgui.cpp  imgui.hpp  install.cpp  install.hpp  log.hpp  menu.cpp  menu.hpp  patchinfo.cpp  (+37 more)
